--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+      href="bulma.min.css"
     />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
