--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=376px, initial-scale=1, user-scalable=no" />
     <title>Apple Pods</title>
     <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css" />
     <link
@@ -17,13 +17,13 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js" defer></script>
   </head>
-  <body>
+  <body style="resize: none;">
     <script src="jquery.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
     <section class="section is-paddingless">
       <div class="columns">
         <div
-          class="column is-three-fifths is-offset-one-fifth is-gapless is-align-content-center"
+          class="column is-gapless is-align-content-center is-align-items-center"
         >
           <div
             class="level is-gapless is-paddingless is-justify-content-center"
@@ -215,8 +215,9 @@
                         line-height: 18px; /* 138.462% */
                         letter-spacing: -0.078px;
                       "
-                    >
+                    ><a href="https://t.me/applepods_black" style="all: unset;">
                       @Applepods_Black
+                    </a>
                     </p>
                     <p
                       style="
@@ -240,7 +241,7 @@
             </div>
           </div>
           <div
-            class="level is-gapless is-paddingless is-justify-content-center is-mobile"
+            class="level is-gapless is-paddingless is-justify-content-space-around is-mobile"
           >
             <div class="owl-carousel teletype_slider">
               <div id="teletype_blocks_div">
