--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 У вас есть незавершенный заказ. Нажмите, чтобы перейти к
                 оформлению.
               </p>
+              <a href="product.html">продукт
+              </a>
               <div class="shopping_cart_icon">
                 <div>
                   <svg
@@ -141,7 +143,7 @@
             <div id="profile_avatar_tgLink">
               <div id="inner_avatar_profile">
                 <div id="profile_avatar">
-                  <img src="profile_test.jpg" />
+                  <img id="profile_image"  src="profile_test.jpg" />
                   <p
                     style="
                       color: var(--White, #ececec);
