--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
                 У вас есть незавершенный заказ. Нажмите, чтобы перейти к
                 оформлению.
               </p>
-              <a href="product.html">продукт
-              </a>
               <div class="shopping_cart_icon">
                 <div>
                   <svg
@@ -801,7 +799,7 @@
                       <p class="card_price">4 687 ₽</p>
                       <p class="card_description">Apple AirPods Max Silver</p>
                     </div>
-                    <button class="gold_button" onclick="testMessage('hui')">Купить</button>
+                    <button class="gold_button">Купить</button>
                   </div>
                 </div>
               </div>
@@ -842,7 +840,7 @@
             class="level is-gapless is-paddingless is-justify-content-center is-mobile"
           >
             <div id="review_button_div">
-              <button class="leave_review">Оставить отзыв</button>
+              <button class="leave_review" onclick="tg.switchInlineQuery('/review')">Оставить отзыв</button>
             </div>
           </div>
           <div
