--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             class="level is-gapless is-paddingless is-justify-content-center is-mobile"
           >
             <div id="review_button_div">
-              <button class="leave_review" onclick="tg.switchInlineQuery('/review')">Оставить отзыв</button>
+              <button class="leave_review" onclick="tg.sendData('/review')">Оставить отзыв</button>
             </div>
           </div>
           <div
