--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     Александр
                   </p>
                 </div>
+                <a href="https://t.me/applepods_black" style="all: unset;">
                 <div id="tgLink">
                   <svg
                     width="33"
@@ -238,6 +239,7 @@
                     </p>
                   </div>
                 </div>
+                </a>
               </div>
             </div>
           </div>
@@ -277,9 +279,10 @@
             class="level is-gapless is-paddingless is-justify-content-space-between is-mobile"
           >
             <div class="quadro_blocks" style="padding-left: 8px;">
+              <a href="#openmymodal" style="text-decoration: none;color: #4a4a4a;">
               <div class="gray_block">
                 <div class="inner_arrow_text">
-                  <p><a href="#openmymodal" style="all: unset">Доставка</a></p>
+                  <p>Доставка</p>
                   <svg
                     width="17"
                     height="16"
@@ -299,6 +302,7 @@
                   Узнать, когда придет посылка
                 </p>
               </div>
+              </a>
               <div class="gray_block">
                 <div class="inner_arrow_text">
                   <p><a href="delivery.html" style="all: unset">FAQ</a></p>
@@ -877,9 +881,9 @@
                       <div class="track_info">
                         <p class="track_info_header">Заказ номер</p>
                         <p class="track_info_addrstate">Адрес доставки:</p>
-                        <p class="track_info_state">Москва</p>
+                        <p class="track_info_state">неизвестен</p>
                         <p class="track_info_addrstate">Текущий статус:</p>
-                        <p class="track_info_state">Москва</p>
+                        <p class="track_info_state">неизвестен</p>
                       </div>
                       <button class="gold_button">Оформить заказ</button>
                     </div>
