--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 $(".slide_header").owlCarousel({
                   items: 1,
                   loop: false,
-                  rewind: false
+                  rewind: false,
                 });
               });
             </script>
@@ -141,7 +141,7 @@
             <div id="profile_avatar_tgLink">
               <div id="inner_avatar_profile">
                 <div id="profile_avatar">
-                  <img id="profile_image"  src="profile_test.jpg" />
+                  <img id="profile_image" src="profile_test.jpg" />
                   <p
                     style="
                       color: var(--White, #ececec);
@@ -159,86 +159,89 @@
                     Александр
                   </p>
                 </div>
-                <a href="https://t.me/applepods_black" style="all: unset;">
-                <div id="tgLink">
-                  <svg
-                    width="33"
-                    height="32"
-                    viewBox="0 0 33 32"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <g clip-path="url(#clip0_63_796)">
-                      <path
-                        d="M16.7469 32.0133C25.5871 32.0133 32.7536 24.8469 32.7536 16.0067C32.7536 7.16643 25.5871 0 16.7469 0C7.90666 0 0.740234 7.16643 0.740234 16.0067C0.740234 24.8469 7.90666 32.0133 16.7469 32.0133Z"
-                        fill="url(#paint0_linear_63_796)"
-                      />
-                      <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
-                        d="M7.97716 15.8334C12.6419 13.8076 15.7473 12.4615 17.3066 11.8084C21.7448 9.95588 22.6777 9.63601 23.2775 9.62268C23.4107 9.62268 23.7039 9.64934 23.9039 9.80927C24.0638 9.94255 24.1038 10.1158 24.1304 10.2491C24.1571 10.3824 24.1837 10.6622 24.1571 10.8755C23.9172 13.4078 22.8776 19.5519 22.3445 22.3774C22.1179 23.5769 21.6781 23.9767 21.2516 24.0167C20.3187 24.0967 19.6123 23.4036 18.7194 22.8172C17.3066 21.8976 16.5203 21.3245 15.1475 20.4182C13.5615 19.3786 14.5877 18.8055 15.494 17.8726C15.7339 17.6327 19.8256 13.9009 19.9055 13.5677C19.9189 13.5277 19.9189 13.3678 19.8256 13.2878C19.7323 13.2079 19.599 13.2345 19.4924 13.2612C19.3458 13.2878 17.1067 14.7805 12.7485 17.726C12.1088 18.1658 11.5357 18.379 11.0159 18.3657C10.4428 18.3524 9.34993 18.0458 8.5236 17.7793C7.52402 17.4594 6.72435 17.2862 6.79099 16.7264C6.83098 16.4332 7.23081 16.14 7.97716 15.8334Z"
-                        fill="white"
-                      />
-                    </g>
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_63_796"
-                        x1="16.7336"
-                        y1="0"
-                        x2="16.7336"
-                        y2="31.7601"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#2AABEE" />
-                        <stop offset="1" stop-color="#229ED9" />
-                      </linearGradient>
-                      <clipPath id="clip0_63_796">
-                        <rect
-                          width="32"
-                          height="32"
-                          fill="white"
-                          transform="translate(0.740234)"
+                <a href="https://t.me/applepods_black" style="all: unset">
+                  <div id="tgLink">
+                    <svg
+                      width="33"
+                      height="32"
+                      viewBox="0 0 33 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <g clip-path="url(#clip0_63_796)">
+                        <path
+                          d="M16.7469 32.0133C25.5871 32.0133 32.7536 24.8469 32.7536 16.0067C32.7536 7.16643 25.5871 0 16.7469 0C7.90666 0 0.740234 7.16643 0.740234 16.0067C0.740234 24.8469 7.90666 32.0133 16.7469 32.0133Z"
+                          fill="url(#paint0_linear_63_796)"
                         />
-                      </clipPath>
-                    </defs>
-                  </svg>
-                  <div id="text_tgLink">
-                    <p
-                      style="
-                        color: var(--White, #ececec);
-                        text-align: center;
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M7.97716 15.8334C12.6419 13.8076 15.7473 12.4615 17.3066 11.8084C21.7448 9.95588 22.6777 9.63601 23.2775 9.62268C23.4107 9.62268 23.7039 9.64934 23.9039 9.80927C24.0638 9.94255 24.1038 10.1158 24.1304 10.2491C24.1571 10.3824 24.1837 10.6622 24.1571 10.8755C23.9172 13.4078 22.8776 19.5519 22.3445 22.3774C22.1179 23.5769 21.6781 23.9767 21.2516 24.0167C20.3187 24.0967 19.6123 23.4036 18.7194 22.8172C17.3066 21.8976 16.5203 21.3245 15.1475 20.4182C13.5615 19.3786 14.5877 18.8055 15.494 17.8726C15.7339 17.6327 19.8256 13.9009 19.9055 13.5677C19.9189 13.5277 19.9189 13.3678 19.8256 13.2878C19.7323 13.2079 19.599 13.2345 19.4924 13.2612C19.3458 13.2878 17.1067 14.7805 12.7485 17.726C12.1088 18.1658 11.5357 18.379 11.0159 18.3657C10.4428 18.3524 9.34993 18.0458 8.5236 17.7793C7.52402 17.4594 6.72435 17.2862 6.79099 16.7264C6.83098 16.4332 7.23081 16.14 7.97716 15.8334Z"
+                          fill="white"
+                        />
+                      </g>
+                      <defs>
+                        <linearGradient
+                          id="paint0_linear_63_796"
+                          x1="16.7336"
+                          y1="0"
+                          x2="16.7336"
+                          y2="31.7601"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#2AABEE" />
+                          <stop offset="1" stop-color="#229ED9" />
+                        </linearGradient>
+                        <clipPath id="clip0_63_796">
+                          <rect
+                            width="32"
+                            height="32"
+                            fill="white"
+                            transform="translate(0.740234)"
+                          />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                    <div id="text_tgLink">
+                      <p
+                        style="
+                          color: var(--White, #ececec);
+                          text-align: center;
 
-                        /* Default/Bold/Footnote */
-                        font-family: SF Pro Text;
-                        font-size: 13px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: 18px; /* 138.462% */
-                        letter-spacing: -0.078px;
-                      "
-                    >
-                      <a href="https://t.me/applepods_black" style="all: unset">
-                        @Applepods_Black
-                      </a>
-                    </p>
-                    <p
-                      style="
-                        color: #a5a5a5;
-                        text-align: center;
+                          /* Default/Bold/Footnote */
+                          font-family: SF Pro Text;
+                          font-size: 13px;
+                          font-style: normal;
+                          font-weight: 600;
+                          line-height: 18px; /* 138.462% */
+                          letter-spacing: -0.078px;
+                        "
+                      >
+                        <a
+                          href="https://t.me/applepods_black"
+                          style="all: unset"
+                        >
+                          @Applepods_Black
+                        </a>
+                      </p>
+                      <p
+                        style="
+                          color: #a5a5a5;
+                          text-align: center;
 
-                        /* Default/Regular/Caption2 */
-                        font-family: SF Pro Text;
-                        font-size: 11px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: 13px; /* 118.182% */
-                        letter-spacing: 0.066px;
-                      "
-                    >
-                      наш Telegram-канал
-                    </p>
+                          /* Default/Regular/Caption2 */
+                          font-family: SF Pro Text;
+                          font-size: 11px;
+                          font-style: normal;
+                          font-weight: 400;
+                          line-height: 13px; /* 118.182% */
+                          letter-spacing: 0.066px;
+                        "
+                      >
+                        наш Telegram-канал
+                      </p>
+                    </div>
                   </div>
-                </div>
                 </a>
               </div>
             </div>
@@ -271,37 +274,40 @@
               $(".teletype_slider").owlCarousel({
                 items: 1,
                 loop: true,
-                rewind: false
+                rewind: false,
               });
             });
           </script>
           <div
             class="level is-gapless is-paddingless is-justify-content-space-between is-mobile"
           >
-            <div class="quadro_blocks" style="padding-left: 8px;">
-              <a href="#openmymodal" style="text-decoration: none;color: #4a4a4a;">
-              <div class="gray_block">
-                <div class="inner_arrow_text">
-                  <p>Доставка</p>
-                  <svg
-                    width="17"
-                    height="16"
-                    viewBox="0 0 17 16"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M6.74023 13L11.3867 8.35355C11.5819 8.15829 11.5819 7.84171 11.3867 7.64645L6.74023 3"
-                      stroke="#ECECEC"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                    />
-                  </svg>
+            <div class="quadro_blocks" style="padding-left: 8px">
+              <a
+                href="#openmymodal"
+                style="text-decoration: none; color: #4a4a4a"
+              >
+                <div class="gray_block">
+                  <div class="inner_arrow_text">
+                    <p>Доставка</p>
+                    <svg
+                      width="17"
+                      height="16"
+                      viewBox="0 0 17 16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M6.74023 13L11.3867 8.35355C11.5819 8.15829 11.5819 7.84171 11.3867 7.64645L6.74023 3"
+                        stroke="#ECECEC"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                  </div>
+                  <p class="gray_block_description">
+                    Узнать, когда придет посылка
+                  </p>
                 </div>
-                <p class="gray_block_description">
-                  Узнать, когда придет посылка
-                </p>
-              </div>
               </a>
               <div class="gray_block">
                 <div class="inner_arrow_text">
@@ -324,37 +330,42 @@
                 <p class="gray_block_description">Ответы на все вопросы</p>
               </div>
             </div>
-            <div class="quadro_blocks" style="padding-right: 8px;">
-              <div class="gold_block">
-                <p>Связь с менеджером</p>
-                <div class="inner_logo_gold_block">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11.7402 5H14.7402C15.1381 5 15.5196 5.15804 15.8009 5.43934C16.0822 5.72064 16.2402 6.10218 16.2402 6.5V11C16.2402 11.3978 16.0822 11.7794 15.8009 12.0607C15.5196 12.342 15.1381 12.5 14.7402 12.5H13.2402L11.7402 14.75L9.49023 12.5H7.24023C6.84241 12.5 6.46088 12.342 6.17957 12.0607C5.89827 11.7794 5.74023 11.3978 5.74023 11V11"
-                      stroke="#1C1C1E"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M2.74023 1.25H10.2402C10.6381 1.25 11.0196 1.40804 11.3009 1.68934C11.5822 1.97064 11.7402 2.35218 11.7402 2.75V7.25C11.7402 7.64783 11.5822 8.02936 11.3009 8.31066C11.0196 8.59197 10.6381 8.75 10.2402 8.75H7.99023L5.74023 11L3.49023 8.75H2.74023C2.34241 8.75 1.96088 8.59197 1.67957 8.31066C1.39827 8.02936 1.24023 7.64783 1.24023 7.25V2.75C1.24023 2.35218 1.39827 1.97064 1.67957 1.68934C1.96088 1.40804 2.34241 1.25 2.74023 1.25V1.25Z"
-                      stroke="#1C1C1E"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
+            <div class="quadro_blocks" style="padding-right: 8px">
+              <a
+                href="https://t.me/archimolotok"
+                style="text-decoration: none; color: #1c1c1e"
+              >
+                <div class="gold_block">
+                  <p>Связь с менеджером</p>
+                  <div class="inner_logo_gold_block">
+                    <svg
+                      width="18"
+                      height="16"
+                      viewBox="0 0 18 16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.7402 5H14.7402C15.1381 5 15.5196 5.15804 15.8009 5.43934C16.0822 5.72064 16.2402 6.10218 16.2402 6.5V11C16.2402 11.3978 16.0822 11.7794 15.8009 12.0607C15.5196 12.342 15.1381 12.5 14.7402 12.5H13.2402L11.7402 14.75L9.49023 12.5H7.24023C6.84241 12.5 6.46088 12.342 6.17957 12.0607C5.89827 11.7794 5.74023 11.3978 5.74023 11V11"
+                        stroke="#1C1C1E"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M2.74023 1.25H10.2402C10.6381 1.25 11.0196 1.40804 11.3009 1.68934C11.5822 1.97064 11.7402 2.35218 11.7402 2.75V7.25C11.7402 7.64783 11.5822 8.02936 11.3009 8.31066C11.0196 8.59197 10.6381 8.75 10.2402 8.75H7.99023L5.74023 11L3.49023 8.75H2.74023C2.34241 8.75 1.96088 8.59197 1.67957 8.31066C1.39827 8.02936 1.24023 7.64783 1.24023 7.25V2.75C1.24023 2.35218 1.39827 1.97064 1.67957 1.68934C1.96088 1.40804 2.34241 1.25 2.74023 1.25V1.25Z"
+                        stroke="#1C1C1E"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
                 </div>
-              </div>
+              </a>
               <div class="gray_block">
                 <div class="inner_arrow_text">
-                  <p><a href="delivery.html" style="all: unset">Корзина</a></p>
+                  <p><a href="delivery.html" style="all: unset;">Корзина</a></p>
                   <svg
                     width="17"
                     height="16"
@@ -844,7 +855,9 @@
             class="level is-gapless is-paddingless is-justify-content-center is-mobile"
           >
             <div id="review_button_div">
-              <button class="leave_review" onclick="tg.sendData('/review')">Оставить отзыв</button>
+              <button class="leave_review" onclick="tg.sendData('/review')">
+                Оставить отзыв
+              </button>
             </div>
           </div>
           <div
@@ -856,10 +869,29 @@
                   <div class="mymodal-header">
                     <h3 class="mymodal-title">Доставка</h3>
                     <div class="closing_button">
-                      <a href="#close" title="Close" class="close"><svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M13.8701 3.48047L3.87012 13.4805" stroke="#636366" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M13.8701 13.4805L3.87012 3.48047" stroke="#636366" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg></a>
+                      <a href="#close" title="Close" class="close"
+                        ><svg
+                          width="17"
+                          height="17"
+                          viewBox="0 0 17 17"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M13.8701 3.48047L3.87012 13.4805"
+                            stroke="#636366"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                          <path
+                            d="M13.8701 13.4805L3.87012 3.48047"
+                            stroke="#636366"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          /></svg
+                      ></a>
                     </div>
                   </div>
                   <div class="mymodal-body">
@@ -868,7 +900,10 @@
                         <p id="advance_help">
                           Введите трек-номер , чтобы узнать статус доставки.
                         </p>
-                        <form name="tracking" onsubmit="getTrack(document.forms.tracking.elements.track_input.value)">
+                        <form
+                          name="tracking"
+                          onsubmit="getTrack(document.forms.tracking.elements.track_input.value)"
+                        >
                           <input
                             placeholder="Введите код"
                             class="gray_input"
