--- a/index.html
+++ b/index.html
@@ -28,109 +28,115 @@
           <div
             class="level is-gapless is-paddingless is-justify-content-center"
           >
-            <div class="header_notification">
-              <p>
-                У вас есть незавершенный заказ. Нажмите, чтобы перейти к
-                оформлению.
-              </p>
-              <div class="shopping_cart_icon">
-                <div>
-                  <svg
-                    width="24"
-                    height="22"
-                    viewBox="0 0 24 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M1.41992 1.77002H4.91992L8.07992 15.48H20.7399L22.0599 5.72002H6.69992"
-                      stroke="url(#paint0_linear_154_53)"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M10.35 17.6201H10.34C9.62207 17.6201 9.04004 18.2021 9.04004 18.9201V18.9301C9.04004 19.6481 9.62207 20.2301 10.34 20.2301H10.35C11.068 20.2301 11.65 19.6481 11.65 18.9301V18.9201C11.65 18.2021 11.068 17.6201 10.35 17.6201Z"
-                      stroke="url(#paint1_linear_154_53)"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M10.35 17.6201H10.34C9.62207 17.6201 9.04004 18.2021 9.04004 18.9201V18.9301C9.04004 19.6481 9.62207 20.2301 10.34 20.2301H10.35C11.068 20.2301 11.65 19.6481 11.65 18.9301V18.9201C11.65 18.2021 11.068 17.6201 10.35 17.6201Z"
-                      stroke="url(#paint2_linear_154_53)"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M17.2099 17.6201H17.1999C16.4819 17.6201 15.8999 18.2021 15.8999 18.9201V18.9301C15.8999 19.6481 16.4819 20.2301 17.1999 20.2301H17.2099C17.9279 20.2301 18.5099 19.6481 18.5099 18.9301V18.9201C18.5099 18.2021 17.9279 17.6201 17.2099 17.6201Z"
-                      stroke="url(#paint3_linear_154_53)"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <defs>
-                      <linearGradient
-                        id="paint0_linear_154_53"
-                        x1="0.653346"
-                        y1="1.77002"
-                        x2="23.0432"
-                        y2="3.62735"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#F5EA99" />
-                        <stop offset="1" stop-color="#DB9B45" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint1_linear_154_53"
-                        x1="8.9431"
-                        y1="17.6201"
-                        x2="11.7852"
-                        y2="17.7767"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#F5EA99" />
-                        <stop offset="1" stop-color="#DB9B45" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint2_linear_154_53"
-                        x1="8.9431"
-                        y1="17.6201"
-                        x2="11.7852"
-                        y2="17.7767"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#F5EA99" />
-                        <stop offset="1" stop-color="#DB9B45" />
-                      </linearGradient>
-                      <linearGradient
-                        id="paint3_linear_154_53"
-                        x1="15.803"
-                        y1="17.6201"
-                        x2="18.6451"
-                        y2="17.7767"
-                        gradientUnits="userSpaceOnUse"
-                      >
-                        <stop stop-color="#F5EA99" />
-                        <stop offset="1" stop-color="#DB9B45" />
-                      </linearGradient>
-                    </defs>
-                  </svg>
+            <a>
+              <div class="header_notification">
+                <p>
+                  У вас есть незавершенный заказ. Нажмите, чтобы перейти к
+                  оформлению.
+                </p>
+                <div class="shopping_cart_icon">
+                  <div>
+                    <svg
+                      width="24"
+                      height="22"
+                      viewBox="0 0 24 22"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.41992 1.77002H4.91992L8.07992 15.48H20.7399L22.0599 5.72002H6.69992"
+                        stroke="url(#paint0_linear_154_53)"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M10.35 17.6201H10.34C9.62207 17.6201 9.04004 18.2021 9.04004 18.9201V18.9301C9.04004 19.6481 9.62207 20.2301 10.34 20.2301H10.35C11.068 20.2301 11.65 19.6481 11.65 18.9301V18.9201C11.65 18.2021 11.068 17.6201 10.35 17.6201Z"
+                        stroke="url(#paint1_linear_154_53)"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M10.35 17.6201H10.34C9.62207 17.6201 9.04004 18.2021 9.04004 18.9201V18.9301C9.04004 19.6481 9.62207 20.2301 10.34 20.2301H10.35C11.068 20.2301 11.65 19.6481 11.65 18.9301V18.9201C11.65 18.2021 11.068 17.6201 10.35 17.6201Z"
+                        stroke="url(#paint2_linear_154_53)"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M17.2099 17.6201H17.1999C16.4819 17.6201 15.8999 18.2021 15.8999 18.9201V18.9301C15.8999 19.6481 16.4819 20.2301 17.1999 20.2301H17.2099C17.9279 20.2301 18.5099 19.6481 18.5099 18.9301V18.9201C18.5099 18.2021 17.9279 17.6201 17.2099 17.6201Z"
+                        stroke="url(#paint3_linear_154_53)"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <defs>
+                        <linearGradient
+                          id="paint0_linear_154_53"
+                          x1="0.653346"
+                          y1="1.77002"
+                          x2="23.0432"
+                          y2="3.62735"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#F5EA99" />
+                          <stop offset="1" stop-color="#DB9B45" />
+                        </linearGradient>
+                        <linearGradient
+                          id="paint1_linear_154_53"
+                          x1="8.9431"
+                          y1="17.6201"
+                          x2="11.7852"
+                          y2="17.7767"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#F5EA99" />
+                          <stop offset="1" stop-color="#DB9B45" />
+                        </linearGradient>
+                        <linearGradient
+                          id="paint2_linear_154_53"
+                          x1="8.9431"
+                          y1="17.6201"
+                          x2="11.7852"
+                          y2="17.7767"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#F5EA99" />
+                          <stop offset="1" stop-color="#DB9B45" />
+                        </linearGradient>
+                        <linearGradient
+                          id="paint3_linear_154_53"
+                          x1="15.803"
+                          y1="17.6201"
+                          x2="18.6451"
+                          y2="17.7767"
+                          gradientUnits="userSpaceOnUse"
+                        >
+                          <stop stop-color="#F5EA99" />
+                          <stop offset="1" stop-color="#DB9B45" />
+                        </linearGradient>
+                      </defs>
+                    </svg>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div
             class="level is-gapless is-paddingless is-justify-content-center"
           >
-            <div class="owl-carousel slide_header"></div>
+            <div class="owl-carousel owl-theme slide_header"></div>
+
             <script>
               $(document).ready(function () {
                 $(".slide_header").owlCarousel({
                   items: 1,
-                  loop: false,
+                  loop: true,
                   rewind: false,
+                  autoplay: true,
+                  autoplayTimeout: 4000,
+                  autoplayHoverPause: true,
                 });
               });
             </script>
@@ -159,7 +165,10 @@
                     Александр
                   </p>
                 </div>
-                <a href="https://t.me/applepods_black" style="all: unset">
+                <a
+                  href="https://t.me/applepods_black"
+                  style="all: unset; display: flex"
+                >
                   <div id="tgLink">
                     <svg
                       width="33"
@@ -365,7 +374,7 @@
               </a>
               <div class="gray_block">
                 <div class="inner_arrow_text">
-                  <p><a href="delivery.html" style="all: unset;">Корзина</a></p>
+                  <p><a href="delivery.html" style="all: unset">Корзина</a></p>
                   <svg
                     width="17"
                     height="16"
@@ -890,8 +899,9 @@
                             stroke-width="2"
                             stroke-linecap="round"
                             stroke-linejoin="round"
-                          /></svg
-                      ></a>
+                          />
+                        </svg>
+                      </a>
                     </div>
                   </div>
                   <div class="mymodal-body">
@@ -902,7 +912,7 @@
                         </p>
                         <form
                           name="tracking"
-                          onsubmit="getTrack(document.forms.tracking.elements.track_input.value)"
+                          onsubmit="getTrack(document.forms.tracking.elements.track_input.value, event)"
                         >
                           <input
                             placeholder="Введите код"
@@ -913,14 +923,6 @@
                           />
                         </form>
                       </div>
-                      <div class="track_info">
-                        <p class="track_info_header">Заказ номер</p>
-                        <p class="track_info_addrstate">Адрес доставки:</p>
-                        <p class="track_info_state">неизвестен</p>
-                        <p class="track_info_addrstate">Текущий статус:</p>
-                        <p class="track_info_state">неизвестен</p>
-                      </div>
-                      <button class="gold_button">Оформить заказ</button>
                     </div>
                   </div>
                 </div>
